--- a/app/src/main/res/layout-land/activity_resultado_imc.xml
+++ b/app/src/main/res/layout-land/activity_resultado_imc.xml
@@ -66,4 +66,23 @@
         android:layout_toStartOf="@+id/resultadoIMC"
         android:layout_marginTop="19dp" />
 
+    <TextView
+        android:text="Más Info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:id="@+id/masInfo"
+        android:layout_below="@+id/resultadoTexto"
+        android:layout_alignRight="@+id/resultadoTexto"
+        android:layout_alignEnd="@+id/resultadoTexto" />
+        android:textStyle="bold"/>
+
+    <LinearLayout
+        android:id="@+id/popuplayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
